<resources>
    <string name="app_name">Fast Food</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingat_saya_checkbox">Ingat Saya</string>
    <string name="lupa_password">Lupa Password</string>

    <!--  Get Started Act  -->
    <string name="get_started_title_1">Temukan yang anda inginkan</string>
    <string name="get_started_desc_1">Dapatkan rekomendasi makanan dan minuman di sekitar anda.</string>

    <string name="get_started_title_2">Informasi nutrisi di setiap makanan</string>
    <string name="get_started_desc_2">Detail informasi nilai gizi dapat anda temukan pada setiap makanan.</string>

    <string name="get_started_title_3">Gabung Sekarang dan Nikmati Fiturnya</string>
    <string name="get_started_desc_3">Daftar dan masuk sekarang untuk menikmati semua fitur Fast Food. </string>
    <string name="get_started_button">Get Started</string>

    <!--  Login & Register Act  -->
    <string name="other_login_method">Atau lanjutkan dengan</string>
    <string name="prompt_name">Nama</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Konfirmasi Password</string>
    <string name="prompt_login">Masuk</string>
    <string name="prompt_register">Daftar</string>

    <!--  Location Act  -->
    <string name="location_title">Hai, Salam Kenal</string>
    <string name="location_desc">Tentukan lokasi anda untuk menemukan rekomendasi restoran yang terdekat!</string>
    <string name="location_current">Gunakan lokasi saat ini</string>
    <string name="location_input">Cari lokasi</string>
    <string name="location_divider">Atau</string>

    <string name="location_option_1">Jalan Merdeka, DKI Jakarta\nIndonesia</string>
    <string name="location_option_2">Jalan Apel, Jawa Timur\nIndonesia</string>
    <string name="location_option_3">Jalan Pahlawan, Jawa Tengah\nIndonesia</string>

    <string name="location_loading">Memuat lokasi anda</string>

    <!--  Welcome Act  -->
    <string name="welcome_title">Selamat Datang</string>
    <string name="welcome_desc">Selamat datang di Fast Food, sekarang anda dapat menikmati beragam makanan dan minuman yang sesuai dengan keinginan anda.</string>
    <string name="welcome_button">OK</string>

    <!--  Forgot Password Act  -->
    <string name="forgot_password_title">Lupa Password?</string>
    <string name="forgot_password_input">Masukkan email anda</string>
    <string name="forgot_password_desc">*Kami akan mengirimkan kode OTP pada email yang Anda masukkan untuk mengatur ulang kata sandi Anda.</string>
    <string name="forgot_password_button">Kirim Kode OTP</string>
    <string name="forgot_password_button_back">Kembali</string>

    <string name="input_code_title">Verifikasi Kode OTP</string>
    <string name="input_code_desc">*Masukkan 4 digit angka yang telah kami kirim pada user@gmail.com</string>
    <string name="input_code_button">Verifikasi</string>
    <string name="input_code_button_another_code">Kirim ulang kode (34s)</string>

    <string name="new_password_title">Password Baru</string>
    <string name="new_password_input">Masukkan password baru</string>
    <string name="new_password_input_confirm">Konfirmasi password baru</string>
    <string name="new_password_button">Ubah Password</string>

    <!--    -->
</resources>