<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_register_main"
    tools:context=".ForgotPasswordActivity1">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/login_register_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginFragmentBtn"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="?android:selectableItemBackground"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="@string/prompt_login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerFragmentBtn"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="?android:selectableItemBackground"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="@string/prompt_register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="@string/forgot_password_title"
        android:textColor="@color/login_register_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_form"
        android:elevation="5dp"
        android:hint="@string/forgot_password_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/forgot_password_desc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSendOTP"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_register_button"
        android:elevation="5dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:stateListAnimator="@null"
        android:text="@string/forgot_password_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/outlined_button_primary"
        android:elevation="5dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:stateListAnimator="@null"
        android:text="@string/forgot_password_button_back"
        android:textColor="@color/login_register_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSendOTP"
        app:layout_constraintStart_toStartOf="@+id/buttonSendOTP" />


</androidx.constraintlayout.widget.ConstraintLayout>