<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity3">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="@string/new_password_title"
        android:textColor="@color/login_register_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_form"
        android:elevation="5dp"
        android:hint="@string/new_password_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_form"
        android:elevation="5dp"
        android:hint="@string/new_password_input_confirm"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChangePassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/login_register_button"
        android:elevation="5dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:stateListAnimator="@null"
        android:text="@string/new_password_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>