<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetLocationActivity1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="@string/location_title"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_regular"
        android:text="@string/location_desc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getLocationBtn"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_register_button"
        android:drawableStart="@drawable/ic_gps"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:paddingStart="41dp"
        android:paddingEnd="45dp"
        android:text="@string/location_current"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/searchLocationEditText"
        app:layout_constraintStart_toStartOf="@+id/searchLocationEditText"
        app:layout_constraintTop_toBottomOf="@+id/otherLoginTextView" />

    <TextView
        android:id="@+id/otherLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/metropolis_regular"
        android:text="@string/location_divider"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/searchLocationEditText"
        app:layout_constraintStart_toStartOf="@+id/searchLocationEditText"
        app:layout_constraintTop_toBottomOf="@+id/searchLocationEditText" />

    <View
        android:id="@+id/rightLine"
        android:layout_width="5dp"
        android:layout_height="1dp"
        android:layout_marginEnd="3dp"
        android:alpha="0.6"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/otherLoginTextView"
        app:layout_constraintEnd_toStartOf="@+id/otherLoginTextView"
        app:layout_constraintTop_toTopOf="@+id/otherLoginTextView" />

    <View
        android:id="@+id/leftLine"
        android:layout_width="5dp"
        android:layout_height="1dp"
        android:layout_marginStart="3dp"
        android:alpha="0.6"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/otherLoginTextView"
        app:layout_constraintStart_toEndOf="@+id/otherLoginTextView"
        app:layout_constraintTop_toTopOf="@+id/otherLoginTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchLocationEditText"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button_primary"
        android:drawableStart="?android:attr/actionModeWebSearchDrawable"
        android:drawablePadding="9dp"
        android:fontFamily="@font/metropolis_regular"
        android:hint="@string/location_input"
        android:paddingStart="16dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>